--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   "license": "ISC",
   "description": "Mommers Co | Discord Bot",
   "dependencies": {
-    "appwrite": "^15.0.0",
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
+    "node-appwrite": "^13.0.0",
     "nodemon": "^3.1.4",
     "systeminformation": "^5.22.11"
   }
