--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "description": "Mommers Co | Discord Bot",
   "dependencies": {
+    "appwrite": "^15.0.0",
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
     "node-appwrite": "^13.0.0",
