--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
     "node-appwrite": "^13.0.0",
+    "node-schedule": "^2.1.1",
     "nodemon": "^3.1.4",
     "systeminformation": "^5.22.11"
   }
