--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "client/client.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon client/client.js",
+    "dev": "nodemon --trace-warnings client/client.js",
     "start": "node client/client.js"
   },
   "repository": {
