--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --trace-warnings client/client.js",
-    "start": "node client/client.js"
+    "start": "node --trace-warnings client/client.js"
   },
   "repository": {
     "type": "git",
