--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
     "fs-extra": "^11.2.0",
+    "moment": "^2.30.1",
     "node-appwrite": "^13.0.0",
     "node-schedule": "^2.1.1",
     "nodemon": "^3.1.4",
