--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "node-appwrite": "^13.0.0",
     "node-schedule": "^2.1.1",
     "nodemon": "^3.1.4",
-    "systeminformation": "^5.22.11"
+    "systeminformation": "^5.22.11",
+    "unzipper": "^0.12.3"
   }
 }
