--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "appwrite": "^15.0.0",
     "archiver": "^7.0.1",
+    "crypto": "^1.0.1",
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
     "fs-extra": "^11.2.0",
