--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "fs-extra": "^11.2.0",
     "moment": "^2.30.1",
     "node-appwrite": "^13.0.0",
+    "node-fetch": "^2.7.0",
     "node-schedule": "^2.1.1",
     "nodemon": "^3.1.4",
+    "rss-parser": "^3.13.0",
     "systeminformation": "^5.22.11",
     "unzipper": "^0.12.3"
   }
